HVAC Backup 2/objects/Parent_CSV_Mapping__mdt.object
<CustomObject>
    <description>Parent Of CSV Mapping Uploader</description>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <label>Apex Class Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Method_Name__c</fullName>
        <label>Apex Method Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Registration</fullName>
                    <default>true</default>
                    <label>Product Registration</label>
                </value>
                <value>
                    <fullName>Ticket Creation</fullName>
                </value>
                <value>
                    <fullName>Work Order Creation</fullName>
                </value>
                <value>
                    <fullName>Product Transfer Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Parent CSV Mapping</label>
    <pluralLabel>Parent CSV Mappings</pluralLabel>
</CustomObject>